--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,9 @@
+
+<div class="jumbotron">
+	<div class="container text-center">
 <h1>Welcome To My Pinterested App!</h1>
 <p>Pretty cool, don't you think?</p>
+<%= link_to "Login", root_path, class: 'btn btn-group btn-light text-center' %>
+<%= link_to "Join", root_path, class: 'btn btn-group btn-primary text-center' %>
+</div>
+</div>
