--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
-    <%= yield %>
+
+  	
+	<%= render 'home/header' %>
+
+	<div class="container">
+    	<%= yield %>
+	</div>
   </body>
 </html>
