--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -5,11 +5,12 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav bg-light mr-auto">
-      <li class="nav-item nav-link text-black"><%= link_to "Home", root_path %></li>
+    <ul class="navbar-nav navbar-right bg-light ml-auto">
+      <li class="nav-item nav-link"><%= link_to "Home", root_path %></li>
       <li class="nav-item nav-link"><%= link_to "About Me", home_about_path%></li>
-      
-      </ul>
+      <li class="nav-item nav-link"><%= link_to "Login",  new_user_session_path %></li>
+      <li class="nav-item nav-link"><%= link_to "Join", new_user_registration_path %></li>
+    </ul>
    
   </div>
 </nav>
