--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Pinterested</a>
+  <%= link_to "Pinterested", root_path, class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,8 +8,17 @@
     <ul class="navbar-nav navbar-right bg-light ml-auto">
       <li class="nav-item nav-link"><%= link_to "Home", root_path %></li>
       <li class="nav-item nav-link"><%= link_to "About Me", home_about_path%></li>
-      <li class="nav-item nav-link"><%= link_to "Login",  new_user_session_path %></li>
-      <li class="nav-item nav-link"><%= link_to "Join", new_user_registration_path %></li>
+
+      <% if user_signed_in? %>
+        <li class="nav-item nav-link"><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <li class="nav-item nav-link"><%= link_to "Edit Profile", edit_user_registration_path %></li> 
+      <% else %>
+        <li class="nav-item nav-link"><%= link_to "Login",  new_user_session_path %></li>
+        <li class="nav-item nav-link"><%= link_to "Join", new_user_registration_path %></li>
+      <% end %>
+      
+      
+      
     </ul>
    
   </div>
