--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -10,6 +10,8 @@
       <li class="nav-item nav-link"><%= link_to "About Me", home_about_path%></li>
 
       <% if user_signed_in? %>
+        <li class="nav-item nav-link"><%= link_to "Add Pin", new_pin_path%></li>
+        <li class="nav-item nav-link"><%= link_to "List Pins", pins_path%></li>
         <li class="nav-item nav-link"><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
         <li class="nav-item nav-link"><%= link_to "Edit Profile", edit_user_registration_path %></li> 
       <% else %>
